# rpg_simple

./: CMakeLists.txt  README.md
src/: functions.cpp  main.cpp
